--- a/style.css
+++ b/style.css
@@ -2,16 +2,17 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
 }
 
 h1{
 text-align:center;
-color: rgb(15, 20, 20);
+color:rgb(3, 0, 0);
 position:absolute ;
 z-index: 1;
 left: 610px;
-
-}
+top: 60%;
+} 
 
 main{
     height: 100vh;
@@ -21,7 +22,9 @@ main{
     justify-content: center;
     align-items: center;
     overflow: hidden;
-
+    background-image:url(image90.jpeg);
+    background-size: cover;
+    
 }
 
 .card {
